--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employeecorral",
   "version": "1.0.0",
   "description": "Create employee roster",
-  "main": "server.js",
+  "main": "index.js",
   "dependencies": {
     "console.table": "^0.10.0",
     "express": "^4.17.1",
